# Sem2Labs

lab1/: makefile
lab1/src/: Main.c  SqrMatrix.c  SqrMatrix.h  TypeComplex.c  TypeComplex.h  TypeDouble.c  TypeDouble.h  TypeInfo.c  TypeInfo.h
lab2/: CMakeLists.txt
lab2/include/: dynamicArray.hpp  linkedList.hpp  myDeque.hpp  myQueue.hpp  mySet.hpp  myStack.hpp
lab2/include/lab3UI/: lab3UI.hpp  myDequeUI.hpp  mySetUI.hpp  myStackOrQueueUI.hpp  myStackUI.hpp
lab2/include/sequence/: dynamicArraySequence.hpp  linkedListSequence.hpp  sequence.hpp
lab2/src/: lab2UI.cpp  tests.cpp
lab2/src/lab3UI/: lab3UI.cpp  main.cpp  myDequeUI.cpp  mySetUI.cpp  myStackOrQueueUI.cpp  myStackUI.cpp
lab2/tests/: TestHelper.hpp  linkedListTest.hpp  mySetTest.hpp  myStackTest.hpp
lab2/tests/sequence/: dynamicArraySequenceTest.hpp  linkedListSequenceTest.hpp
lab2KDevelop/: CMakeLists.txt  lab2KDevelop.kdev4
lab2KDevelop/.kdev4/: lab2KDevelop.kdev4
lab2KDevelop/tests/: TestHelper.hpp  linkedListTest.hpp
lab3/: CMakeLists.txt  binTree.hpp  icollection.hpp  main.cpp  priorityQueue.hpp  set.hpp  test.cpp  test_binTree.hpp
